--- a/estilos.css
+++ b/estilos.css
@@ -20,7 +20,7 @@
 }
 
 body{
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(22, 22, 22);
 }
 html{
     scroll-behavior: smooth;
@@ -82,7 +82,7 @@ html{
 }
 #barranav{
     height: 110px;
-    background-color: black;
+    background-color: rgb(22, 22, 22);
 }
 
 .nosotros{
@@ -100,6 +100,16 @@ html{
     border-radius: 4px;
 }
 
+.imagenempresa{
+    display: flex;
+    align-items: end;
+    justify-content: end;
+    margin-right: 100px;
+}
+
+.imagenempresa1 .imagenempresa2{
+    margin-top: 1000px;
+}
 
 
 
