--- a/estilos.css
+++ b/estilos.css
@@ -4,27 +4,22 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 .responsive{
         width: 100%; 
         height: auto;
 }
 
-.separador-azul {
-    display: flex;
-    position: relative;
-    width: 60%;
-    top: -12px;
-    left: 20%;
-    height: 12px;
-    background-color: rgb(239, 184, 16);
-}
 
 body{
     background-color: rgb(22, 22, 22);
 }
-html{
-    scroll-behavior: smooth;
-}
+
+
+/* NABVAR */
 
 #dezertnav{
     font-size: 35px;
@@ -85,31 +80,66 @@ html{
     background-color: rgb(22, 22, 22);
 }
 
-.nosotros{
-    margin-top: 225px;
-    margin-left: 120px;
-    color: white;
+/* NABVAR */
+
+/* INFORMACION */
+/* columnas responsive con grid */
+.responsive-two-column-grid{
+    display: block;
+    align-items: center;
+    padding: 1rem;
 }
 
-.btn-contacto{
-    margin-top: 25px;
-    margin-left: 260px;
+@media (min-width:768px){
+    .responsive-two-column-grid{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+/* columnas responsive con grid */
+
+/* columna 1 frase+boton */
+.frase {
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+  }
+  .frase h2 {
+    font-family: uno;
+    text-align: center;
+    color: rgb(255, 255, 255);
+    margin-top: 100px;
+    font-size: 25px;
+    transform: scale(1);
+    transition: 1.5s;
+    margin-bottom: 20px;
+  }
+  .frase button {
+    margin-top: 20px;
+    font-size: 22px;
     background-color: rgb(239, 184, 16);
-    padding: 7px 15px 7px 15px;
-    border: none;
-    border-radius: 4px;
-}
+    color: rgb(0, 0, 0);
+    border: 1px solid black;
+    padding: 10px;
+    padding: 15px 45px 15px 45px;
+    transform: rotate(0deg);
+    transition: 1.5s;
+  }
+  
+  .frase button:hover {
+    background-color: rgb(255, 153, 0);
+  }
+/* columna 1 frase+boton */
 
-.imagenempresa{
-    display: flex;
-    align-items: end;
-    justify-content: end;
-    margin-right: 100px;
+/* columna 2 imagen */
+.img{
+    
 }
+/* columna 2 imagen */
 
-.imagenempresa1 .imagenempresa2{
-    margin-top: 1000px;
-}
+/* INFORMACION */
+
+
+
 
 
 
