--- a/estilos.css
+++ b/estilos.css
@@ -145,6 +145,9 @@ body{
 }
 
 /* ESTO HACE QUE LA FOTO NO SE PEGUE AL BOTON EN EL CONTACTO */
+
+/* QUE HACEMOS */
+
 #imagen-nav{
     margin-top: 45px;
 }
@@ -212,3 +215,11 @@ body{
 #right-arrow{
     color: white;
 }
+
+/* QUE HACEMOS */
+
+/* NOSOTROS */
+#tarjeta{
+    
+}
+/* NOSOTROS */
