--- a/estilos.css
+++ b/estilos.css
@@ -219,7 +219,25 @@ body{
 /* QUE HACEMOS */
 
 /* NOSOTROS */
-#tarjeta{
+.col{
+    background-color: rgb(0, 0, 0);
+    height: 300px;
+    overflow: hidden;
+    word-wrap: break-word;
+    margin-left: 20px;
+    margin-right: 20px;
+    }
     
-}
+    .row{
+    padding: 5vh;
+    column-gap: 5px;
+    margin-left: 20px;
+    margin-right: 20px;
+    }
+
+    .pp{
+        color: white;
+    }
+    
+    
 /* NOSOTROS */
