--- a/estilos.css
+++ b/estilos.css
@@ -78,6 +78,7 @@ body{
 #barranav{
     height: 110px;
     background-color: rgb(22, 22, 22);
+    
 }
 
 /* NABVAR */
@@ -109,24 +110,27 @@ body{
     text-align: center;
     color: rgb(255, 255, 255);
     margin-top: 100px;
-    font-size: 25px;
+    font-size: 45px;
     transform: scale(1);
     transition: 1.5s;
     margin-bottom: 20px;
   }
   .frase button {
     margin-top: 20px;
-    font-size: 22px;
+    font-size: 15px;
     background-color: rgb(239, 184, 16);
+    border-radius: 10px;
     color: rgb(0, 0, 0);
     border: 1px solid black;
     padding: 10px;
-    padding: 15px 45px 15px 45px;
-    transform: rotate(0deg);
-    transition: 1.5s;
+    padding: 15px 35px 15px 35px;
+    transform: scale(1);
+    transition: .4s;
 }
 
 .frase button:hover {
+    transform: scale(1.2);
+    transition: .4s;
     background-color: rgb(255, 153, 0);
 }
 /* columna 1 frase+boton */
@@ -150,6 +154,8 @@ body{
 
 #imagen-nav{
     margin-top: 45px;
+    border-radius: 5%;
+
 }
 
 #quehacemos{
@@ -237,7 +243,85 @@ body{
 
     .pp{
         color: white;
+        padding-top: 40px;
     }
+    #pp{
+        color: white;
+        font-size: 22px;
+    }
+
+#imagenCEO{
+    width: 60px;
+    height: 60px;
+    border-radius: 55%;
+}
     
     
 /* NOSOTROS */
+
+/*:::::Pie de Pagina*/
+.pie-pagina{
+    width: 100%;
+    background-color: rgb(22, 22, 22);;
+}
+.pie-pagina .grupo-1{
+    width: 100%;
+    max-width: 1200px;
+    margin: auto;
+    display:grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap:50px;
+    padding: 45px 0px;
+}
+.pie-pagina .grupo-1 .box figure{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.pie-pagina .grupo-1 .box figure img{
+    width: 250px;
+}
+.pie-pagina .grupo-1 .box h2{
+    color: #fff;
+    margin-bottom: 25px;
+    font-size: 20px;
+}
+.pie-pagina .grupo-1 .box p{
+    color: #efefef;
+    margin-bottom: 10px;
+}
+.pie-pagina .grupo-1 .red-social a{
+    display: inline-block;
+    text-decoration: none;
+    width: 45px;
+    height: 45px;
+    line-height: 45px;
+    color: #fff;
+    margin-right: 10px;
+    background-color: rgb(22, 22, 22);
+    text-align: center;
+    transition: all 300ms ease;
+}
+.pie-pagina .grupo-1 .red-social a:hover{
+    color: aqua;
+}
+.pie-pagina .grupo-2{
+    background-color: rgb(22, 22, 22);
+    padding: 15px 10px;
+    text-align: center;
+    color: #fff;
+}
+.pie-pagina .grupo-2 small{
+    font-size: 15px;
+}
+@media screen and (max-width:800px){
+    .pie-pagina .grupo-1{
+        width: 90%;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap:30px;
+        padding: 35px 0px;
+    }
+}
+/*:::::Pie de Pagina*/
