--- a/estilos.css
+++ b/estilos.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+
+body{
+    background-color: rgb(22, 22, 22);
+}
 html{
     scroll-behavior: smooth;
 }
@@ -13,10 +17,6 @@ html{
         height: auto;
 }
 
-
-body{
-    background-color: rgb(22, 22, 22);
-}
 
 
 /* NABVAR */
@@ -110,20 +110,19 @@ body{
     text-align: center;
     color: rgb(255, 255, 255);
     margin-top: 100px;
-    font-size: 45px;
+    font-size: 40px;
     transform: scale(1);
     transition: 1.5s;
     margin-bottom: 20px;
   }
   .frase button {
     margin-top: 20px;
-    font-size: 15px;
+    font-size: 13px;
     background-color: rgb(239, 184, 16);
     border-radius: 10px;
     color: rgb(0, 0, 0);
     border: 1px solid black;
-    padding: 10px;
-    padding: 15px 35px 15px 35px;
+    padding: 13px 30px;
     transform: scale(1);
     transition: .4s;
 }
@@ -153,8 +152,10 @@ body{
 /* QUE HACEMOS */
 
 #imagen-nav{
+    width: 440px;
+    height: 320px;
     margin-top: 45px;
-    border-radius: 5%;
+    border-radius: 2%;
 
 }
 
@@ -179,9 +180,9 @@ body{
 }
 
 #quehacemos1{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(240px, auto));
+    grid-gap: 2.5rem;
     padding-left: 150px;
     padding-right: 150px;
 }
@@ -226,7 +227,7 @@ body{
 
 /* NOSOTROS */
 .col{
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(10, 10, 10);
     height: 300px;
     overflow: hidden;
     word-wrap: break-word;
@@ -254,7 +255,9 @@ body{
     width: 60px;
     height: 60px;
     border-radius: 55%;
+    
 }
+
     
     
 /* NOSOTROS */
@@ -267,140 +270,218 @@ body{
     margin-top: 30px;
     margin-bottom: 35px;
     color: rgb(255, 255, 255);
-  }
+}
 
-  .trabajos_texto{
+.trabajos_texto{
     color: white;
     
-  }
+}
 
-  .contenedor {
+.contenedor {
     width: 100%;
     margin: auto;
     margin-bottom: 100px;
-  }
+}
 
-  img {
+img {
     width: 100%;
-  }
-  
-  .trabajo__columna {
-    margin: 22px;
-  }
-  
-  .trabajos .contenedor {
-    display: grid;
-  }
+}
 
-  @media only screen and (min-width: 320px) and (max-width: 768px) {
+.trabajo__columna {
+    margin: 22px;
+}
+
+.trabajos .contenedor {
+    display: grid;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
     .btn-wsp {
-      width: 63px;
-      height: 63px;
-      line-height: 66px;
+        width: 63px;
+        height: 63px;
+        line-height: 66px;
     }
-  }
-  @media (min-width: 520px) {
+}
+@media (min-width: 520px) {
     .trabajos .contenedor {
-      grid-template-columns: repeat(2, 50%);
+        grid-template-columns: repeat(2, 50%);
     }
-  }
-  @media (min-width: 728px) {
+}
+@media (min-width: 728px) {
     .trabajos .contenedor {
-      grid-template-columns: repeat(3, 33.3%);
+    grid-template-columns: repeat(3, 33.3%);
     }
-  }
-  @media (min-width: 1024px) {
+}
+@media (min-width: 1024px) {
     .trabajos .contenedor {
-      grid-template-columns: repeat(4, 25%);
+        grid-template-columns: repeat(4, 25%);
     }
     .contenedor {
-      width: 1024px;
+        width: 1024px;
     }
-  }
-  @media (min-width: 1200px) {
+}
+@media (min-width: 1200px) {
     .contenedor {
-      width: 1200px;
-    }
+    width: 1200px;
+}
+}
 
   /*NUESTRO TRABAJO */ 
- 
-  /*COMO PODEMOS AYUDARTE*/ 
-    .container{
-        width: 75vw;
-        max-width: 1000px;
-        min-width: 1800px;
-        margin: auto;
-    }
-    img{
-        width: 100%;
-    }
-  /*COMO PODEMOS AYUDARTE*/ 
-  
+
+/*COMO PODEMOS AYUDARTE*/ 
+
+
+    /*COMO PODEMOS AYUDARTE*/ 
+
 
 
 /*:::::Pie de Pagina*/
-.pie-pagina{
-    width: 100%;
-    background-color: rgb(22, 22, 22);;
-}
-.pie-pagina .grupo-1{
-    width: 100%;
-    max-width: 1200px;
-    margin: auto;
-    display:grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap:50px;
-    padding: 45px 0px;
-}
-.pie-pagina .grupo-1 .box figure{
-    width: 100%;
-    height: 100%;
+.main{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-wrap: wrap;
 }
-.pie-pagina .grupo-1 .box figure img{
-    width: 250px;
+
+.footer{
+    padding: 10px 0;
 }
-.pie-pagina .grupo-1 .box h2{
-    color: #fff;
+
+.col1{
+    width: 25%;
+}
+
+.col1 h4{
+    font-size: 1.2rem;
+    color: white;
     margin-bottom: 25px;
-    font-size: 20px;
+    position: relative;
 }
-.pie-pagina .grupo-1 .box p{
-    color: #efefef;
+
+.col1 h4::before{
+    content: "";
+    position: absolute;
+    height: 2px;
+    width: 50px;
+    left: 0;
+    bottom: -8px;
+    background: rgb(179, 192, 2);
+}
+
+.col1 ul li:not(:last-child){
+    margin-bottom: 15px;
+}
+
+.col1 ul li a{
+    color: rgb(255, 255, 255);
+    font-size: 1.1rem;
+    display: block;
+    text-transform: capitalize;
+    transition: .4s;
+}
+
+.col1 ul li a:hover{
+    color: rgb(179, 192, 2);
+    transform: translateX(12px);
+}
+
+.col1 .social{
+    width: 220px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    text-decoration: none;
+}
+
+.col1 .social a{
+    height: 40px;
+    width: 40px;
+    background: #ff702a;
+    color: white;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.5rem;
+    border-radius: 50%;
+    transition: .4s;
+}
+
+.col1 .social a:hover{
+    transform: scale(1.2);
+    color: white;
+    background: black;
+    text-decoration: none;
+}
+
+
+
+
+/*:::::Pie de Pagina*
+
+/*:::::SERVICIOS */
+
+.servicios{
+    width: 100%;
+    height: 100vh;
+    padding: 0 8%;
+    margin-bottom: 200px;
+}
+
+.servicios h2{
+    text-align: center;
+    padding-top: 10%;
+    margin-bottom: 60px;
+    font-weight: 600;
+    position: relative;
+    color: white;
+}
+
+.servicios p{
+    color: white;
+}
+
+.servicios h2::after{
+    content: "";
+    background: rgb(22, 22, 22);
+    width: 100px;
+    height: 5px;
+    position: absolute;
+    bottom: -5px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.row{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 30px;
+}
+
+.servicios1{
+    text-align: center;
+    padding: 25px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    background: transparent;
+    transition: 0.4s, background 0.4s;
+}
+
+.servicios1 i{
+    font-size: 40px;
     margin-bottom: 10px;
 }
-.pie-pagina .grupo-1 .red-social a{
-    display: inline-block;
-    text-decoration: none;
-    width: 45px;
-    height: 45px;
-    line-height: 45px;
-    color: #fff;
-    margin-right: 10px;
-    background-color: rgb(22, 22, 22);
-    text-align: center;
-    transition: all 300ms ease;
+
+.servicios1 h2{
+    font-weight: 600;
+    margin-bottom: 8px;
 }
-.pie-pagina .grupo-1 .red-social a:hover{
-    color: aqua;
+
+.servicios1:hover{
+    background: rgb(255, 154, 3);
+    color: white;
+    transform: scale(1.05);
 }
-.pie-pagina .grupo-2{
-    background-color: rgb(22, 22, 22);
-    padding: 15px 10px;
-    text-align: center;
-    color: #fff;
+
+.servicios1:hover i{
+    color: rgb(146, 138, 138);
+
 }
-.pie-pagina .grupo-2 small{
-    font-size: 15px;
-}
-@media screen and (max-width:800px){
-    .pie-pagina .grupo-1{
-        width: 90%;
-        grid-template-columns: repeat(1, 1fr);
-        grid-gap:30px;
-        padding: 35px 0px;
-    }
-}
-/*:::::Pie de Pagina*/
+/*:::::SERVICIOS */
