--- a/fuentes.css
+++ b/fuentes.css
@@ -1,15 +1,27 @@
 @font-face {
-    font-family: unoR;
-    src: url(fuentes/MADE\ TOMMY\ Regular_PERSONAL\ USE.otf);
+    font-family: "Jumper-black";
+    src: url(fuentes/JumperPERSONALUSEONLY-Black.ttf);
 }
 
 @font-face {
-    font-family: dosG;
-    src: url(fuentes/MADE\ TOMMY\ ExtraBold_PERSONAL\ USE.otf);
+    font-family: "Jumper-bold";
+    src: url(fuentes/JumperPERSONALUSEONLY-Bold.ttf);
 }
 
 @font-face {
-    font-family: tresF;
-    src: url(fuentes/MADE\ TOMMY\ Light_PERSONAL\ USE.otf);
+    font-family: "Jumper-light";
+    src: url(fuentes/JumperPERSONALUSEONLY-Light.ttf);
 }
+
+@font-face {
+    font-family: "Jumper-regular";
+    src: url(fuentes/JumperPERSONALUSEONLY-Regular.ttf);
+}
+
+@font-face {
+    font-family: "Jumper-extralight";
+    src: url(fuentes/JumperPERSONALUSEONLY-Thin.ttf);
+}
+
+
 
