--- a/estilos.css
+++ b/estilos.css
@@ -128,8 +128,8 @@ html{
     transform: scale(1);
     transition: 1.5s;
     margin-bottom: 20px;
-  }
-  .frase button {
+}
+.frase button {
     margin-top: 20px;
     font-size: 13px;
     background-color: rgb(239, 184, 16);
@@ -312,6 +312,10 @@ html{
 .text{
     font-size: 14px;
     margin: 0.6rem 0;
+}
+
+.card__wrapper{
+    font-family: 'Jumper-regular'
 }
 
 .icon{
