--- a/estilos.css
+++ b/estilos.css
@@ -158,6 +158,36 @@ html{
     margin-top: 100px;
 }
 
+.row{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 30px;
+}
+
+.qh{
+    text-align: center;
+    padding: 25px 10px;
+    border-radius: 5px;
+    cursor: pointer;
+    background: transparent;
+    transition: 0.4s, background 0.4s;
+    font-family: Jumper-extralight;
+}
+
+.qh h2{
+    font-weight: 600;
+    margin-bottom: 8px;
+    font-family: Jumper-bold;
+}
+
+.qh:hover{
+    background: rgb(0, 0, 0);
+    color: rgb(119, 119, 119);
+    transform: scale(1.05);
+}
+
+
+
 .titulo150{
     padding-top: 150px;
     padding-bottom: 100px;
@@ -174,24 +204,6 @@ html{
     color: rgb(239, 184, 16);
 }
 
-#quehacemos1{
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(240px, auto));
-    grid-gap: 2.5rem;
-    padding-left: 150px;
-    padding-right: 150px;
-    font-family: "Jumper-light";
-}
-
-#quehacemos1 h2{
-    color: white;
-    font-size: 25px;
-}
-#quehacemos1 p{
-    padding-top: 10px;
-    color: rgb(77, 76, 76);
-    font-size: 20px;
-}
 
 #btn-id{
     display: flex;
@@ -267,7 +279,6 @@ html{
     width: 100%;
     height: 100vh;
     padding: 0 8%;
-    margin-bottom: 200px;
 }
 
 .servicios h2{
@@ -481,5 +492,9 @@ footer {
     }
 }
 
-/*FOOTER*
+/*FOOTER*/
+
+/*QUEHACEMOS - */
+
+
 
