--- a/estilos.css
+++ b/estilos.css
@@ -158,12 +158,15 @@ html{
 #quehacemos{
     background-color: rgb(10, 10, 10);
     margin-top: 100px;
+    padding-bottom: 100px;
 }
 
 .row{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 30px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 .qh{
@@ -248,23 +251,23 @@ html{
 }
 
 #mateo{
-    transform: translateX(0px);
+    transform: scale(1);
     transition: .6s;
 }
 
 #mateo:hover{
-    transform: translateX(20px);
+    transform: scale(1.1);
     transition: .6s;
 }
 
 
 #tiago{
-    transform: translateX(0px);
+    transform: scale(1);
     transition: .6s;
 }
 
 #tiago:hover{
-    transform: translateX(-20px);
+    transform: scale(1.1);
     transition: .6s;
 }
 
@@ -364,6 +367,7 @@ html{
     width: 100%;
     height: 100vh;
     padding: 0 8%;
+    margin-bottom: 75px;
 }
 
 .servicios h2{
@@ -522,6 +526,11 @@ img {
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 100px;
+}
+
+.footer-col{
+    margin-left: 30px;
+    margin-right: 30px;
 }
 
 .footer-col ul{
