--- a/estilos.css
+++ b/estilos.css
@@ -103,7 +103,7 @@ html{
 
 /* HABLA CON NOSOTROS + FOTO */
 #imagen-nav{
-    width: 80%; 
+    width: 70%; 
     max-width: 100%; 
     height: auto; 
     background-size: contain; 
@@ -111,20 +111,20 @@ html{
     background-position: center; 
     border-radius: 1pc;
     margin-left: 55px;
-    margin-top: 70px;
+    margin-top: 20px;
 }
 
 .frase {
     font-family: 'Jumper-regular', Times, serif;
     text-align: center;
-    margin-top: 150px;
+    margin-top: 100px;
 }
 .frase h2 {
     font-family: Jumper-light;
     text-align: center;
     color: rgb(255, 255, 255);
     margin-top: 100px;
-    font-size: 40px;
+    font-size: 35px;
     transform: scale(1);
     transition: 1.5s;
     margin-bottom: 20px;
@@ -148,7 +148,7 @@ html{
 }
 
 #imagen-frase{
-    margin-top: 50px;
+    margin-top: 20px;
     margin-right: 20px;
 }
 /* HABLA CON NOSOTROS + FOTO */
@@ -198,8 +198,9 @@ html{
     padding-bottom: 100px;
     padding-left: 75px;
     padding-right: 75px;
-    margin-left: 50px;
-    margin-right: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     color: white;
     font-size: 38px;
     font-family: "Jumper-regular";
