Arreglo footer, baile y nav-bar

--- a/estilos.css
+++ b/estilos.css
@@ -481,7 +481,11 @@ img {
 
 @media only screen and (min-width: 320px) and (max-width: 480px) {
     .servicios{
-        margin-bottom: 250px;
+        margin-bottom: 300px;
+    }
+
+    #imagen-frase{
+        margin-top: 150px;
     }
 
 }
@@ -515,7 +519,7 @@ img {
 /*COMO PODEMOS AYUDARTE*/ 
 
 
- /*COMO PODEMOS AYUDARTE*/ 
+/*COMO PODEMOS AYUDARTE*/ 
 
 
 
